--- a/services.html
+++ b/services.html
@@ -6,12 +6,12 @@
 </head>
 <body>
   <div id="wrapper">
-  <header><h1> Fish Creek Animal Hospital </h1></header>
-  <nav><b> <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="askvet.html">Ask the Vet</a>
-    <a href="contact.html">Contact</a>
-   </b> </nav>
+  <header><h1><img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"></h1></header>
+  <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
+    <a href="services.html"><img src="Services.gif" alt="Services" height="100%" weight="100%"></a>
+    <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
+    <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
+  </nav>
    <main>
      <ul>
        <li><span class="category">Medical Services</span></li>
@@ -24,6 +24,7 @@
        <br>The elderly, phyiscally challenged, and multiple pet households often find our in-home veterinary service helpful and convenient.<p></p>
        <li><span class="category">Emergencies</span></li>
        <br>At least one of our doctors is on call every day and night.<p></p>
+     </ul>
    </main>
    <footer>
      <br>
