--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head> <link rel="stylesheet" href="fishcreek.css">
-  <title> Fish Creek Animal Hospital </title>
+<head><link rel="stylesheet" href="fishcreek.css">
+  <title> Fish Creek Animal Hospital Ask the Vet </title>
   <meta charset="utf-8">
 </head>
 <body>
   <div id="wrapper">
-  <header><h1> Fish Creek Animal Hospital </h1></header>
-  <nav> <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="askvet.html">Ask the Vet</a>
-    <a href="contact.html">Contact</a>
+  <header><h1><img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"></h1></header>
+  <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
+    <a href="services.html"><img src="Services.gif" alt="Services" height="100%" weight="100%"></a>
+    <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
+    <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
   </nav>
+   <main>
+   </main>
    <footer>
      <br>
-    Copyright © 2016 Fish Creek Animal Hospital
+     Copyright © 2016 Fish Creek Animal Hospital
      <br>James Potratz <a href="mailto:s1471955@student.mcckc.edu">s1471955@student.mcckc.edu</a></div>
 </body>
 </html>
