--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
   <div id="wrapper">
-  <header><h1> Fish Creek Animal Hospital </h1></header>
-  <nav> <a href="index.html">Home</a>
-    <a href="services.html">Services</a>
-    <a href="askvet.html">Ask the Vet</a>
-    <a href="contact.html">Contact</a>
+  <header><h1> <img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"> </h1></header>
+  <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
+    <a href="services.html"><img src="Services.gif" alt="Services" height="100%" weight="100%"></a>
+    <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
+    <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
   </nav>
    <main>
      <p><dl><b>
@@ -26,6 +26,11 @@
    </main>
    <footer>
      <br>
+     <nav> <a href="index.html">Home</a>
+       <a href="services.html">Services</a>
+       <a href="askvet.html">Ask the Vet</a>
+       <a href="contact.html">Contact</a>
+     </nav>
     Copyright © 2016 Fish Creek Animal Hospital
      <br>James Potratz <a href="mailto:s1471955@student.mcckc.edu">s1471955@student.mcckc.edu</a></div>
 </body>
