--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 <head> <link rel="stylesheet" href="fishcreek.css">
+  <!--[if lt IE 9]>
+<script src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<![endif]-->
   <title> Fish Creek Animal Hospital </title>
   <meta charset="utf-8">
 </head>
-<body>
-  <div id="wrapper">
-  <header><h1> <img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"> </h1></header>
-  <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
-    <a href="services.html"><img src="Services.gif" alt="Services" height="100%" weight="100%"></a>
-    <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
-    <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
+<body><div id="wrapper">
+  <header>
+    <h1> Fish Creek Animal Hospital </h1>
+  </header>
+  <nav>
+    <ul>
+      <li> <a href="index.html"> Home </a> </li>
+      <li> <a href="services.html"> Services </a></li>
+      <li> <a href="askvet.html"> Ask the Vet </a></li>
+      <li> <a href="contact.html"> Contact </a></li>
+    </ul>
   </nav>
    <main>
-     <p><dl><b>
+     <dl>
        <dt class="category">Full Service Facility</dt>
        <dd>Veterinarians and staff are on duty 24 hours a day, 7 days a week.</dd>
      <dt class="category">Years of Experience</dt>
        <dd>Fish Creek Veterinarians have provided quality, dependable care for your beloved animals since 1984.</dd>
      <dt class="category">Open Door Policy</dt>
-       <dd>Our professionals welcome owners to stay with their pets during any medical prodecure</dd></b></dl></p>
-    <div>800-555-5555
+       <dd>Our professionals welcome owners to stay with their pets during any medical prodecure</dd></dl>
+    800-555-5555
       <br> 1242 Grassy Lane
-      <br> FIsh Creek, WI 55534 </div>
+      <br> Fish Creek, WI 55534
    </main>
    <footer>
-     <br>
-     <nav> <a href="index.html">Home</a>
-       <a href="services.html">Services</a>
-       <a href="askvet.html">Ask the Vet</a>
-       <a href="contact.html">Contact</a>
-     </nav>
     Copyright © 2016 Fish Creek Animal Hospital
-     <br>James Potratz <a href="mailto:s1471955@student.mcckc.edu">s1471955@student.mcckc.edu</a></div>
-</body>
+     <br>James Potratz <a href="mailto:s1471955@student.mcckc.edu">s1471955@student.mcckc.edu</a>
+   </footer>
+</div></body>
 </html>
