--- a/askvet.html
+++ b/askvet.html
@@ -8,7 +8,7 @@
   <div id="wrapper">
   <header><h1><img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"></h1></header>
   <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
-    <a href="services.html"><img src="Services.gif" alt="Services" height="100%" weight="100%"></a>
+    <a href="services.html"><img src="services.gif" alt="Services" height="100%" weight="100%"></a>
     <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
     <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
   </nav>
