--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
   <title> Fish Creek Animal Hospital </title>
   <meta charset="utf-8">
 </head>
-<body><div id="wrapper">
+<div id="wrapper">
+<body>
   <header>
-    <h1> Fish Creek Animal Hospital </h1>
+    <h1 class="header-site">Fish Creek Animal Hospital </h1>
   </header>
   <nav>
     <ul>
@@ -36,5 +37,5 @@
     Copyright © 2016 Fish Creek Animal Hospital
      <br>James Potratz <a href="mailto:s1471955@student.mcckc.edu">s1471955@student.mcckc.edu</a>
    </footer>
-</div></body>
+</body></div>
 </html>
