--- a/services.html
+++ b/services.html
@@ -4,13 +4,18 @@
   <title> Fish Creek Animal Hospital Services </title>
   <meta charset="utf-8">
 </head>
+<div id="wrapper">
 <body>
-  <div id="wrapper">
-  <header><h1><img src="fishcreeklogo.gif" alt="Fish Creek Animal Hospital" height="100" weight="100"></h1></header>
-  <nav> <a href="index.html"><img src="home.gif" alt="Home" height="100%" weight="100%"></a>
-    <a href="services.html"><img src="services.gif" alt="Services" height="100%" weight="100%"></a>
-    <a href="askvet.html"><img src="askthevet.gif" alt="Ask the Vet" height="100%" weight="100%"></a>
-    <a href="contact.html"><img src="contact.gif" alt="contact" height="100%" weight="100%"></a>
+  <header>
+    <h1 class="header-site">Fish Creek Animal Hospital </h1>
+  </header>
+  <nav>
+    <ul>
+      <li> <a href="index.html"> Home </a> </li>
+      <li> <a href="services.html"> Services </a></li>
+      <li> <a href="askvet.html"> Ask the Vet </a></li>
+      <li> <a href="contact.html"> Contact </a></li>
+    </ul>
   </nav>
    <main>
      <ul>
