--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <![endif]-->
   <title> Fish Creek Animal Hospital </title>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <div id="wrapper">
 <body>
@@ -29,7 +30,7 @@
        <dd>Fish Creek Veterinarians have provided quality, dependable care for your beloved animals since 1984.</dd>
      <dt class="category">Open Door Policy</dt>
        <dd>Our professionals welcome owners to stay with their pets during any medical prodecure</dd></dl>
-    800-555-5555
+       <a id="mobile" href="tel:800-555-5555">800-555-5555</a> <span id="desktop">800-555-5555</span>
       <br> 1242 Grassy Lane
       <br> Fish Creek, WI 55534
    </main>
