--- a/services.html
+++ b/services.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head><link rel="stylesheet" href="fishcreek.css">
   <title> Fish Creek Animal Hospital Services </title>
   <meta charset="utf-8">
