--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <head><link rel="stylesheet" href="fishcreek.css">
-  <title> Fish Creek Animal Hospital Ask the Vet </title>
+  <title> Fish Creek Animal Hospital Contact </title>
   <meta charset="utf-8">
 </head>
 <div id="wrapper">
@@ -18,7 +18,19 @@
       <li> <a href="contact.html"> Contact </a></li>
     </ul>
   </nav>
-   </main>
+  <main>
+    <h2> Contact Fish Creek </h2>
+    <p>Required fields are marked with an asterisk (*).</p>
+    <form action="http://webdevbasics.net/scripts/ishcreek.php" method="post">
+      <label for="myName"> * Name: </label>
+      <input type="text" id="myName" required />
+      <label for="myEmail">* E-mail: </label>
+      <input type="email" id="myEmai" required />
+      <label for="myComments">* Comments:</label>
+      <textarea rows="2" cols="20" id="myComments" required> </textarea>
+      <input type="submit" value="Send Now" id="mySubmit" />
+    </form>
+        </main>
    <footer>
      <br>
      Copyright © 2016 Fish Creek Animal Hospital
